<resources>
    <string name="app_name">Contacts</string>
    <string name="useravatar">userAvatar</string>
    <string name="contacts">Contacts</string>
    <string name="search">Search</string>
    <string name="search1">"   Search"</string>
    <string name="selected_letter">A</string>
    <string name="name">Name</string>
    <string name="userPhone">+998944529517</string>
    <string name="todo">TODO</string>
    <string name="share_location">Share Location</string>
    <string name="share_contact">Share contact</string>
    <string name="qr_code">Qr code</string>
    <string name="_40_minutes_ago">40 minutes ago</string>
    <string name="home">Home</string>
</resources>