<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Top AppBar Layout-->

    <LinearLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/useravatar"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/contacts"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/useravatar"
            android:src="@drawable/ic_launcher_background" />
    </LinearLayout>

    <!--    SearchBar Layout-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/search"
            android:hint="@string/search1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    Last Seen Users List-->

    <ListView
        android:id="@+id/last_seen_users_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/searchBar" />

    <!--    Selected Letter layout-->

    <TextView
        android:id="@+id/selectedLetter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cccc"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/selected_letter"
        app:layout_constraintTop_toBottomOf="@id/last_seen_users_list" />

    <!--    Users List Layout-->

    <ListView
  android:id="@+id/usersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/selectedLetter" />
</androidx.constraintlayout.widget.ConstraintLayout>